--- a/apps/mascota/templates/scanner/scanner.html
+++ b/apps/mascota/templates/scanner/scanner.html
@@ -103,7 +103,7 @@
                             <video id="scanner-webcam" class="h-full w-full object-cover" autoplay playsinline></video>
                             <canvas id="scanner-canvas" class="hidden"></canvas>
                             <div id="scanner-camera-overlay" class="absolute inset-0 flex items-center justify-center text-white bg-black bg-opacity-75">
-                                <i class="fas fa-spinner fa-spin mr-2"></i> Inicializando cámara...
+                                <i class="fas fa-video mr-2"></i> Presiona "Iniciar cámara" para comenzar
                             </div>
                         </div>
                         
@@ -404,11 +404,6 @@
                     </li>
                 </ul>
                 
-                <div class="mt-4 border-t border-gray-200 pt-3">
-                    <a href="#" class="text-primary-600 hover:text-primary-800 text-sm flex items-center justify-center">
-                        <i class="fas fa-book mr-1"></i> Más información sobre biometría
-                    </a>
-                </div>
             </div>
         </div>
     </div>
